# wormhole

./: .gitignore  AGENTS.md  Dockerfile  README.md  Wormhole-GUI.vbs  ddd.exam.agent.prompt.md  example.env  how-to-project-wormhole.md  main.py  pengu  pyproject.toml  wormhole.ps1  wormhole.sh  wormhole.spec
.github/prompts/: ddd.exam.agent.prompt.md
.github/workflows/: build.yml
exams/: ddd_exam_state.json
images/: wormhole-min.xcf  wormhole.xcf
packaging/: create-x-icons.sh  icon.icns  install-linux.sh  wormhole.iss
prompts/: 2025-10-31-01.AGENTS.md
test_docs/: translate-test-es.docx
wormhole/: __init__.py  cli.py  configuration.py  documents.py  errors.py  gui.py  policy.py  providers.py  segmenter.py  structures.py  translator.py
