[project]
name = "wormhole"
version = "1.0.2"
description = "An document translator preserving document structure, lay-out and formatting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openai>=1.0.0",
    "prepper",
]
authors = [ { name = "Iwan van der Kleijn" } ]
license = { file = "LICENSE" }

[tool.uv.sources]
prepper = { git = "https://github.com/soyrochus/prepper.git", rev = "v0.1.1" }

